Add copy/paste to clipboard for nvim

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -16,6 +16,7 @@ $gradle\
 $haskell\
 $java\
 $julia\
+$python\
 $nodejs\
 $nim\
 $rust\
@@ -137,8 +138,13 @@ symbol = " "
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
+[python]
+symbol = "🐍 "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
 [time]
 disabled = false
 time_format = "%R" # Hour:Minute Format
 style = "bg:#33658A"
-format = '[ ♥ $time ]($style)'
+format = '[ $time ]($style)'
