--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,8 @@
 unbind r 
 bind r source-file ~/.config/tmux/.tmux.conf
 
+set -s set-clipboard on
+
 set -g prefix C-a
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
