--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,7 @@ unbind r
 bind r source-file ~/.config/tmux/.tmux.conf
 
 set -s set-clipboard on
+set -sg escape-time 300
 
 set -g prefix C-a
 set -g default-terminal "tmux-256color"
