Add tmux limit and copilot

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,7 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+bind-key C-a send-prefix
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator' 
@@ -42,5 +43,7 @@ set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
 
 set -g status-position top 
+
+set-option -g history-limit 25000
 
 run '~/.tmux/plugins/tpm/tpm'
