--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,31 +19,16 @@ bind-key C-a send-prefix
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator' 
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
-set -g @catppuccin_flavour 'mocha' 
+set -g @tokyo-night-tmux_window_id_style digital
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
 
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
-
-set -g @catppuccin_window_default_fill "number"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-
-set -g @catppuccin_status_modules_right "application session date_time"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
-
-set -g status-position top 
+set -g status-position bottom 
 
 set-option -g history-limit 25000
 
 run '~/.tmux/plugins/tpm/tpm'
+run ~/.tmux/plugins/tmux/catppuccin.tmux
+
