--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,7 +25,9 @@ set -g @tokyo-night-tmux_window_id_style digital
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_zoom_id_style dsquare
 
-set -g status-position bottom 
+set -g @tokyo-night-tmux_show_music 1
+
+set -g status-position top 
 
 set-option -g history-limit 25000
 
