--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
-unbind r 
+unbind r
 bind r source-file ~/.config/tmux/.tmux.conf
 
 set -s set-clipboard on
-set -sg escape-time 300
+set -sg escape-time 0
 
 set -g prefix C-a
 set -g default-terminal "tmux-256color"
@@ -10,15 +10,15 @@ set -ga terminal-overrides ",*256col*:Tc"
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 set-environment -g COLORTERM "truecolor"
 
-setw -g mode-keys vi 
-bind-key h select-pane -L 
+setw -g mode-keys vi
+bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 bind-key C-a send-prefix
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator' 
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin "janoamaral/tokyo-night-tmux"
 
 set -g @tokyo-night-tmux_window_id_style digital
@@ -27,10 +27,12 @@ set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 set -g @tokyo-night-tmux_show_music 1
 
-set -g status-position top 
+set -g status-position top
 
 set-option -g history-limit 25000
 
+bind c new-window -c "#{pane_current_path}"
+set -g renumber-windows on
+
 run '~/.tmux/plugins/tpm/tpm'
 run ~/.tmux/plugins/tmux/catppuccin.tmux
-
